--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ last_name: Grasshof
 email: stgr@itu.dk
 description: > # the ">" symbol means to ignore newlines until "footer_text:" A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-keywords: machine learning, academic, unversity # add your own keywords or leave empty
+keywords: machine learning, academic, university # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
