--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:" A 
 footer_text: >
 keywords: machine learning, academic, university # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+# icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://stellagra.github.io/ # the base hostname & protocol for your site
 baseurl:   # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -75,17 +75,17 @@ research_gate_profile: # your profile on ResearchGate
 scopus_id: # your profile on Scopus
 blogger_url: # your blogger URL
 work_url: # work page URL
-keybase_username: # your keybase user name
+#keybase_username: # your keybase user name
 dblp_url: # your DBLP profile url
 stackoverflow_id: # your stackoverflow id
 kaggle_id: # your kaggle id
 spotify_id: # your spotify id
 pinterest_id: # your pinterest id
-unsplash_id: # your unsplash id
-instagram_id: # your instagram id
-facebook_id: # your facebook id
-youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
-discord_id: # your discord id (18-digit unique numerical identifier)
+#unsplash_id: # your unsplash id
+#instagram_id: # your instagram id
+#facebook_id: # your facebook id
+#youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
+#discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 
 contact_note: >
@@ -109,7 +109,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Stella's blog # blog_name will be displayed in your blog page
-blog_description: This is the personal and academic blog of Stella Grasshof.
+blog_description: Welcome to my blog!
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -264,7 +264,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code"] # these tags will be displayed on the front page of your blog
+display_tags: ["research", "teaching","random"] # these tags will be displayed on the front page of your blog
 display_categories: ["blockquotes"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
