minor update - news, and about

--- a/_config.yml
+++ b/_config.yml
@@ -65,11 +65,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: stellagra # your GitHub user name
 gitlab_username: # your GitLab user name
-x_username: # your X handle
-mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+#x_username: # your X handle
+#mastodon_username: # your mastodon instance+username in the format instance.tld/@username
+linkedin_username: stella-graßhof-15202579 # your LinkedIn user name
 scholar_userid: kSuLm58AAAAJ&hl # your Google Scholar ID
-semanticscholar_id: 263157560 # your Semantic Scholar ID
+semanticscholar_id: 23620370 # your Semantic Scholar ID
 orcid_id: 0000-0002-6791-7425 # your ORCID ID
 research_gate_profile: # your profile on ResearchGate
 scopus_id: # your profile on Scopus
@@ -80,7 +80,7 @@ dblp_url: # your DBLP profile url
 stackoverflow_id: # your stackoverflow id
 kaggle_id: # your kaggle id
 spotify_id: # your spotify id
-pinterest_id: # your pinterest id
+#pinterest_id: # your pinterest id
 #unsplash_id: # your unsplash id
 #instagram_id: # your instagram id
 #facebook_id: # your facebook id
@@ -272,7 +272,7 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Grasshof]
+  last_name: [Graßhof]
   first_name: [Stella]
 
   style: apa
