--- a/_config.yml
+++ b/_config.yml
@@ -265,7 +265,7 @@ jekyll-archives:
     category: "/blog/category/:name/"
 
 display_tags: ["research", "productivity", "fun"] # these tags will be displayed on the front page of your blog
-display_categories: ["tools", "academic life"] # these categories will be displayed on the front page of your blog
+display_categories: ["tools", "academic_life"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
